lints.workspace = true

[package]
name = "pyrr-math"
edition = "2021"

version.workspace = true
rust-version.workspace = true

[dependencies]
glm.workspace = true
libm.workspace = true
mint.workspace = true
na.workspace = true
simba.workspace = true
wit-bindgen.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]
